	* webrocket/backend_endpoint.go: optimized access to vhost's lobby
	* webrocket/backend_connection.go: removed unused timeout

2012-01-20  Krzysztof Kowalik  <chris@nu7hat.ch>

	* distro/archlinux/rc.d/webrocket: created an init script for arch linux 
	* webrocket/: backend proto fixes and optimization

2012-01-23 Pablo Astigarraga <pote@tardis.com.uy>

	* webrocket/backend_connection.go: Minor nipticks and a trailing character.
	* webrocket/admin_endpoint.go: Several typos.
	* webrocket/README: Minor change in grammar.
	* webrocket-server/README: minor grammar change.

2012-01-19  Krzysztof Kowalik  <chris@nu7hat.ch>

	* docs/webrocket-server.1.txt: updated docs
	* webrocket/: various fixes
	* webrocket/webrocket_integration_test.go: added integration tests for websocket proto and backend req
	* webrocket-admin/: formatting fixes
	* webrocket-server/: formatting fixes

2012-01-18  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket/: huuuge amount of changes to make things work properly
	* webrocket-admin/main.go: fixes

2012-01-14  Pablo Astigarraga  <pote@tardis.com.uy>

	* CONTRIBUTE: Various language nipticks.
	* CONTRIBUTORS: Language change, proper email address.
	* INSTALL: Language changes, typos, trailing characters, etc.
	* README: Minor language changes, trailing characters.

2012-01-12  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket-admin/: added list_workers option
	* webrocket/: backend protocol fixes

2012-01-11  Krzysztof Kowalik  <chris@nu7hat.ch>

	* COPYING: License changed to AGPLv3
	* webrocket/: optimization, tie between backend and frontend, admin endpoint
	* webrocket-server/: adjusted implementation, overall awesomeness
	* webrocket-admin/: created nodes management tool
	* deps/: added several dependencies

2012-01-02  Krzysztof Kowalik  <chris@nu7hat.ch>

	* webrocket/backend_identity.go: cleanups
	* webrocket/websocket_client.go: changed errors logging, updated uuid references